# idavator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  ida-plugin.json  llvm2ida.py  pyproject.toml
.githooks/: pre-commit
.github/workflows/: deploy.yml  python.yml  release.yml
examples/: cp.ll
src/idavator/: _clang_loader.py  cfg_verify.py  circle_types.py  cli.py  events.py  ida2llvm.py  ir_annotations.py  itanium_to_msvc.py  llvm2ida.py  llvm_drop.py  oracle.py  persistence.py  round_trip.py  type_providers.py
src/idavator/_vendor/: __init__.py
src/idavator/gui/: __init__.py  plugin.py
src/idavator/ir_passes/: __init__.py  concurrency.py  pipeline.py  verify.py
tests/: conftest.py  render_tolerance.py  test_apply_llvm_ir.py  test_baseline_lift.py  test_baseline_metrics.py  test_circle_types.py  test_drop_addr_alloca.py  test_drop_addrtaken_alloca.py  test_drop_argreg_preserve.py  test_drop_argspill_across_call.py  test_drop_call_argwidth.py  test_drop_call_varargs.py  test_drop_calloc_store_collapse.py  test_drop_calls.py  test_drop_canary.py  test_drop_cast_narrow.py  test_drop_controlflow.py  test_drop_cursor_struct_define.py  test_drop_cursor_zerooffset.py  test_drop_distinct_ea_50342.py  test_drop_fp_compare.py  test_drop_fp_load_factor.py  test_drop_freewins_relift.py  test_drop_fullbody.py  test_drop_gep.py  test_drop_gep_stack.py  test_drop_global_reloc.py  test_drop_helper_intrinsic.py  test_drop_host_offset_collision.py  test_drop_icall_key_byvalue.py  test_drop_indirect_call.py  test_drop_missing_deref.py  test_drop_missing_param_store.py  test_drop_multiblock.py  test_drop_noreturn.py  test_drop_recv_params.py  test_drop_retslot_generalize.py  test_drop_retslot_residual.py  test_drop_return.py  test_drop_scalar_deref_store.py  (+22 more)
tests/artifacts/cp_lift/: metrics.json
tests/artifacts/cp_lift_concurrency/: metrics.json
tests/artifacts/cp_lift_pipeline/: metrics.json
tests/artifacts/fixture_tls_syscall/: metrics.json
tests/baseline_kit/: __init__.py  metrics.py  reporting.py  support.py
tests/fixtures/: cp_lift.ll  tls_syscall_sample.ll
tools/: sync_plugin_version.py
