[build-system]
requires = ["setuptools>=77.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "idavator"
requires-python = ">= 3.10"
dynamic = ["version"]
authors = [{ name = "Mahmoud Abdelkader", email = "mabdelkader@gmail.com" }]
description = "IDAvator is a bi-directional bridge between IDA Pro's Hex-Rays microcode and LLVM IR. It lets you lift decompiler microcode into LLVM for analysis, optimization, or deobfuscation. Then, drop it back into IDA, patched and ready for further exploration."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "ida pro",
    "hex-rays",
    "decompiler",
    "microcode",
    "llvm",
    "reverse engineering",
    "binary analysis",
    "deobfuscation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["llvmlite>=0.44.0", "numpy>=2.0.0", "typer>=0.10.0"]

[project.urls]
Homepage = "https://github.com/mahmoudimus/idavator"
Documentation = "https://github.com/mahmoudimus/idavator/blob/main/README.md"
Source = "https://github.com/mahmoudimus/idavator"
Issues = "https://github.com/mahmoudimus/idavator/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-forked",
    # Fallback libclang for the AST oracle on platforms where IDA's bundled
    # libclang cannot parse a translation unit (notably the Linux idalib build,
    # whose libclang.so exposes only the type-info API and returns a null TU from
    # clang_parseTranslationUnit). The pip wheel bundles a parse-capable
    # libclang shared library + matching clang.cindex bindings. macOS keeps using
    # IDA's own (working) libclang; this is only consulted when a parse smoke-test
    # fails. See idavator._clang_loader.load_clang_index.
    "libclang>=16",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ida: requires IDA Pro idalib (skipped when unavailable)",
]
addopts = "-ra"

[project.scripts]
idavator = "idavator.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "idavator.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"idavator._vendor.clang" = ["LICENSE"]

# Coverage configuration
[tool.coverage.run]
source = ["src/idavator"]
omit = ["*/__pycache__/*"]
